# DeepTorchToolkit

./: .gitignore  CONTRIBUTING.md  README.md  conftest.py  main.py  pyproject.toml
.github/workflows/: ci.yml
configs/: .gitignore  advanced_config.yaml  defaults.yaml  example_advanced_config.yaml  example_defaults.yaml  example_flow_matching_config.yaml  example_minimal_config.yaml  minimal_config.yaml  train_config.yml
configs/evaluation/: example_eval_2d.yaml
configs/latent_diffusion/: example_ldm_unet.yaml  example_vae.yaml
configs/segmentation/: example_unet.yaml
configs/wavelet_flow_matching/: example_wfm_inference.yaml
datasets/: .gitignore
docs/: inference_guide.md  wandb_authentication.md
src/: main.py
src/commands/: app_train.py
src/dtt/: __init__.py
src/dtt/cli/: main.py
src/dtt/config/: defaults.yaml  schemas.py
src/dtt/data/: __init__.py
src/dtt/data/datamodules/: __init__.py  base.py  chest_xray2d.py  medical2d.py  medical3dct.py
src/dtt/data/datamodules/custom_datasets/: __init__.py  json_cache_ds.py
src/dtt/data/transforms/: medical2d.py  medical3dct.py
src/dtt/evaluation/: __init__.py  evaluate.py  feature_extractors.py  metrics.py  paired_metrics.py  visualize.py
src/dtt/inference/: __init__.py  dummy_datamodule.py  infer.py
src/dtt/models/: __init__.py  base.py
src/dtt/models/flow_matching/: __init__.py  flow_matching.py
src/dtt/models/latent_diffusion/: __init__.py  ldm_unet.py  vae.py  vqvae.py
src/dtt/models/monai/: unet.py
src/dtt/models/unet/: __init__.py  unet.py
src/dtt/models/wavelet_diffusion/: __init__.py  wavelet_diffusion.py  wavelet_unet.py
src/dtt/models/wavelet_diffusion/dwt_idwt/: __init__.py  dwt_idwt_functions.py  dwt_idwt_layers.py
src/dtt/models/wavelet_flow_matching/: __init__.py  wavelet_flow_matching.py
src/dtt/training/: callbacks.py  train.py
src/dtt/utils/: io.py  logging.py  registry.py  seed.py
src/ml/: __init__.py  registry.py
src/ml/datamodules/chest_xray/: chest_datamodule.py  chest_dataset.py
src/ml/models/cnn2d/: lit_cnn.py
src/ml/models/cnn2d/networks/: resnet18.py
tests/: test_cli.py  test_cli_advanced.py  test_config.py  test_config_advanced.py  test_evaluation.py  test_registry.py  test_scheduler_metrics.py  test_wavelet_diffusion.py  test_wavelet_flow_matching.py
